Fix for issue - Getting extra space below the tabs in segmented control

--- a/src/main/webapp/styles/less/wm-mobile-widgets.less
+++ b/src/main/webapp/styles/less/wm-mobile-widgets.less
@@ -6,7 +6,6 @@
   .width-height();
   > .btn-group.btn-group-justified {
     position: absolute;
-    padding: 1em;
     left: 0;
     top: 0;
     right: 0;
